Add select picker

--- a/main.html
+++ b/main.html
@@ -11,3 +11,12 @@
 <template name="table">
   {{> tabular table=TabularTables.Books class="table table-striped table-bordered table-condensed"}}
 </template>
+
+<template name="LicenceSwitch">
+  <select class="selectpicker btn-info check-out">
+    <option>Compatible</option>
+    <option>Incompatible</option>
+    <option>Re-licence</option>
+  </select>
+  <!-- <button type="button" class="btn btn-xs check-out">Compatible</button> -->
+</template>
