--- a/lib/form.html
+++ b/lib/form.html
@@ -1,30 +1,71 @@
 
 <template name="spdxLicense">
-  {{license.name}}
-  {{license.id}}
-  {{license.url}}
-  {{license.osiApproved}}
+  {{#with getLicenseData spdxid }}
+  <strong>{{spdxid}}</strong>
+  <ul>
+    <li>Name {{name}}</li>
+    <li>Url: {{url}}</li>
+    <li>osiApproved: {{osiApproved}}</li>
+  </ul>
+  {{/with}}
 </template>
 
-<template name="FormBlock">
-  <fieldset>
-    <legend>License Compatibility Form</legend>
-    <div>
-      {{> spdxLicense license=atts.doc.id1 }}
-      {{> spdxLicense license=atts.doc.id2 }}
+
+
+
+
+
+<template name="AnalysisBlock">
+  <div class="row">
+    <div class="col-sm-1">
+      <div class="thumbnail">
+        <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
+      </div>
     </div>
-    {{> afFieldInput name='compatibility' type='select' options="allowed"}}
-    {{> afQuickField name='comments' rows=6}}
-  </fieldset>
-  <button type="submit" class="btn btn-primary">Insert/Update</button>
+    <div class="col-sm-10">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+        <strong>{{getRealName submittedBy}}</strong> <span class="text-muted">commented xxx days ago</span>
+        </div>
+        <div class="panel-body">
+          <div>Compatibility: {{compatibility}} </div>
+          <div>Comments:
+            <div>{{comments}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
 
 <template name="quickForm_MatrixForm">
-  {{#if this }}
-    {{#autoForm collection="LicenseMatrix" id="MatrixForm" doc=atts.doc type="update"}}
-      {{> FormBlock }}
-    {{/autoForm}}
+  <legend>License Compatibility Form</legend>
+  {{#unless $exists atts.doc.verifiedBy }}
+    <div>Verified by {{verifiedBy}}</div>
+    <div>These information are verified and cannot be changed.</div>
+  {{/unless}}
+  <div class="row">
+    <div class="col-md-5">{{> spdxLicense spdxid=atts.doc.spdxid1 }}</div>
+    <div class="col-md-5">{{> spdxLicense spdxid=atts.doc.spdxid2 }}</div>
+  </div>
+  {{#unless $exists atts.doc.analysis }}
+    <div>Nobody has submitted information about these licences. Be the first !</div>
+    {{#unless currentUser}}Please log in to edit.{{/unless}}
   {{else}}
-    <h1>You cannot invoke this page without an identifier</h1>
-  {{/if}}
+    <div class="row">
+      <div class="col-md-12">
+        {{#autoForm id="MatrixForm" type="update-pushArray" collection="LicenseMatrix" doc=exampleDoc scope="analysis"}}
+          <fieldset>
+            <legend>Licence Analysis</legend>
+                {{> afQuickFields }}
+                  <div><button type="submit" class="btn btn-primary">Submit</button></div>
+          </fieldset>
+        {{/autoForm}}
+      </div>
+    </div>
+    <hr/>
+    {{#each atts.doc.analysis }}
+      {{> AnalysisBlock }}
+    {{/each}}
+  {{/unless}}
 </template>
