--- a/lib/home.html
+++ b/lib/home.html
@@ -1,19 +1,35 @@
 <template name="home">
-
-  {{> navbar}}
-
   <div class="container">
-    <h1>License Matrix</h1>
-    <div class="page-header">
-    </div>
-      {{> yield}}
+    {{> navbar}}
+    <div class="page-header">{{title}}</div>
+    {{> yield}}
   </div>
   {{> autoformModals}}
 </template>
 
 <template name="navbar">
-  <ul>
-    <li> <a href="{{pathFor route='home'}}">Matrix</a> </li>
-    <li> <a href="{{pathFor route='insert'}}">Insert</a> </li>
-  </ul>
+  <div class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="{{pathFor route='home'}}">Matrix</a>
+      {{#if currentUser }}
+      <!-- {{#if isInRole 'editor'}} -->
+      <a class="navbar-brand" href="{{pathFor route='moderation'}}">Moderation Queue</a>
+      <!-- {{/if}} -->
+      {{#if isInRole 'admin'}}
+      <a class="navbar-brand" href="{{pathFor route='admin'}}">Admin</a>
+      {{/if}}
+      {{/if}}
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+          {{> loginButtons}}
+      </ul>
+    </div>
+  </div>
 </template>
