--- a/lib/matrix.html
+++ b/lib/matrix.html
@@ -4,9 +4,9 @@
 </template>
 
 <template name="LicenseSwitch">
-  {{#if id}}
-    {{id.compatibility}}
-    {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix" template="MatrixForm" operation="update" doc=id._id}}
+  {{#if doc}}
+    {{doc.compatibility}}
+    {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix" template="MatrixForm" operation="update" doc=doc._id}}
     {{/afModal}}
   {{/if}}
 </template>
