--- a/lib/matrix.html
+++ b/lib/matrix.html
@@ -5,8 +5,12 @@
 
 <template name="LicenseSwitch">
   {{#if doc}}
-    {{doc.compatibility}}
-    {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix" template="MatrixForm" operation="update" doc=doc._id}}
-    {{/afModal}}
+    <div>
+      {{#if $exists doc.analysis}}
+        <div>Comments<span class="badge">{{getLength doc.analysis}}</span></div>
+      {{/if}}
+      {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix" template="MatrixForm" operation="update" doc=doc._id}}
+      {{/afModal}}
+    </div>
   {{/if}}
 </template>
