--- a/lib/moderation.html
+++ b/lib/moderation.html
@@ -3,9 +3,7 @@
 </template>
 
 <template name="ModerationActions">
-  {{debug}}
-  {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix" template="MatrixForm" operation="update" doc=docid}}
+  {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix" template="MatrixFormModeration" operation="update" doc=docid}}
   {{/afModal}}
-  {{#afModal class="fa fa-times fa-fw" collection="ModerationTable" template="MatrixForm" operation="remove" doc=rowid}}
-  {{/afModal}}
+  {{#afModal class="fa fa-times fa-fw" collection="ModerationTable" operation="remove" doc=rowid}}{{/afModal}}
 </template>
