Fix click to edit for license list and comments extra data

--- a/lib/form.html
+++ b/lib/form.html
@@ -33,7 +33,7 @@
     {{#unless currentUser}}Please log in to edit.{{/unless}}
   {{/unless}}
   <div class="comment-section">
-      {{> commentsBox id=atts.doc._id}}
+    {{> commentsBox id=atts.doc._id boxTemplate="LicenseComments"}}
   </div>
 </template>
 
