--- a/lib/home.html
+++ b/lib/home.html
@@ -12,12 +12,7 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="{{pathFor route='home'}}">Matrix</a>
       <a class="navbar-brand" href="{{pathFor route='licenses'}}">SPDX Licenses</a>
-      {{#if currentUser }}
-          <a class="navbar-brand" href="{{pathFor route='moderation'}}">Moderation Queue</a>
-        {{#if isInRole 'admin'}}
-          <a class="navbar-brand" href="{{pathFor route='admin'}}">Admin</a>
-        {{/if}}
-      {{/if}}
+      <a class="navbar-brand" href="{{pathFor route='download'}}">Download</a>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
