--- a/lib/moderation.html
+++ b/lib/moderation.html
@@ -1,8 +1,10 @@
 <template name="ModerationTable">
-  {{> tabular table=TabularTables.Moderation class="table table-striped table-bordered table-condensed"}}
+  {{> reactiveTable class="table table-bordered table-hover"
+      settings=LicensesTableSettings }}
 </template>
 
 <template name="ModerationActions">
+  {{debug}}
   {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix" template="MatrixFormModeration" operation="update" doc=docid}}
   {{/afModal}}
   {{#afModal class="fa fa-times fa-fw" collection="ModerationTable" operation="remove" doc=rowid}}{{/afModal}}
