--- a/lib/user.html
+++ b/lib/user.html
@@ -1,20 +1,21 @@
 <template name="UserTable">
   {{#if isInRole 'admin'}}
-  {{> tabular table=TabularTables.UsersTable class="table table-striped table-bordered table-condensed" }}
+    {{> reactiveTable class="table table-bordered table-hover"
+        settings=UserTableSettings }}
   {{/if}}
 </template>
 
 <template name="UserActions">
-  {{#afModal class="fa fa-pencil fa-fw" template="UserForm" collection="Meteor.users" operation="update" doc=doc._id }}
+  {{#afModal class="fa fa-pencil fa-fw" template="UserForm" collection="Meteor.users" operation="update" doc=_id }}
   {{/afModal}}
-  {{#afModal class="fa fa-times fa-fw" collection="Meteor.users" operation="remove" doc=doc._id}}
+  {{#afModal class="fa fa-times fa-fw" collection="Meteor.users" operation="remove" doc=_id}}
   {{/afModal}}
 </template>
 
 <template name="_loginButtonsAdditionalLoggedInDropdownActions">
   <button class="btn btn-default btn-block" id="login-buttons-edit-profile">Edit profile</button>
   {{#if isInRole 'admin'}}
-    <button class="btn btn-default btn-block" id="login-buttons-admin">Admin</button>
+    <button class="btn btn-default btn-block" id="login-buttons-admin">Admin Users</button>
   {{/if}}
   {{#if isInRole 'editor,admin'}}
     <button class="btn btn-default btn-block" id="login-buttons-moderation">Moderation</button>
