--- a/lib/matrix.html
+++ b/lib/matrix.html
@@ -8,7 +8,7 @@
       {{#if doc.verified }}
         <i class="fa fa-check-square-o" title="Verified by {{doc.verifiedBy}}"></i>
       {{/if}}
-      {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix" template="MatrixForm" operation="update" doc=doc._id}}
+      {{#afModal class="fa fa-pencil fa-fw" collection="SpdxLicenseCompatibility" template="MatrixForm" operation="update" doc=doc._id}}
       {{/afModal}}
     </div>
   {{/if}}
