--- a/lib/select.html
+++ b/lib/select.html
@@ -13,12 +13,12 @@
         {{#if verified}}
           <i class="fa fa-check-square-o" title="Verified by {{verifiedBy}}"></i>
         {{/if}}
-        {{#afModal class="fa fa-pencil fa-fw" collection="LicenseMatrix"
+        {{#afModal class="fa fa-pencil fa-fw" collection="SpdxLicenseCompatibility"
                    template="MatrixForm" operation="update" doc=_id}}
         {{/afModal}}
       </div>
     {{else}}
-      <!-- {{#afModal class="fa fa-file-text fa-fw" collection="LicenseMatrix"
+      <!-- {{#afModal class="fa fa-file-text fa-fw" collection="SpdxLicenseCompatibility"
                  template="MatrixForm" operation="insert" doc=_id}}
       {{/afModal}} -->
     {{/if}}
